kommer dette til å kunne bygges nå?